@@ -61,6 +61,7 @@ public abstract class JAMWikiServlet extends AbstractController {
 	 * @return A ModelAndView object corresponding to the information to be
 	 *  rendered, or <code>null</code> if the method directly handles its own
 	 *  output, for example by writing directly to the output response.
+	 * @throws Exception Thrown if any error occurs during method execution.
 	 */
 	public ModelAndView handleRequestInternal(HttpServletRequest request, HttpServletResponse response) {
 		long start = System.currentTimeMillis();
